ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: champscloset.dpdns.org
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend: 
             service:
               name: my-app
               port:
                 number: 8080
